--- a/flipcart-clone/package.json
+++ b/flipcart-clone/package.json
@@ -12,13 +12,21 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.4",
+    "install": "^0.13.0",
+    "npm": "^10.8.2",
     "parcel": "^2.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "buffer": "^6.0.3",
     "process": "^0.11.10"
   }
 }
